<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">RestaurantMenu</string>
    <string name="action_settings">Settings</string>

    <!-- ACTIONBAR TAB STRINGS -->
    <string name="ui_tabname_appetizer">Appetizer</string>
    <string name="ui_tabname_entree">Entrée</string>
    <string name="ui_tabname_dessert">Dessert</string>
    <string name="ui_tabname_dinner">dinner</string>

    <!-- MENU ITEMS -->
    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_send">Send</string>
    <string name="ui_menu_share">Share</string>
    <string name="ui_menu_about">About</string>
    <string name="ui_menu_feedback">Feedback</string>
    <string name="ui_menu_quit">Quit</string>

    <!-- APPETIZER OPTIONS -->
    <string name="appetizerMenu">Appetizer Menu</string>
    <string name="appetizer_choice1">Paneer Pakora</string>
    <string name="appetizer_choice2">Lamb Sekuwa</string>
    <string name="appetizer_choice3">Chat Samosa</string>
    <string name="appetizer_choice4">Chicken Chilli</string>

    <!-- ENTREE OPTIONS -->
    <string name="entreeMenu">Entrée Menu</string>
    <string name="entree_choice1">Nepali Curry</string>
    <string name="entree_choice2">Momo </string>
    <string name="entree_choice3">Chicken Tandoori</string>
    <string name="entree_choice4">Lamb Shish Kabab</string>

    <!-- DESSERT OPTIONS -->
    <string name="dessertMenu">Dessert Menu</string>
    <string name="dessert_choice1">Kheer (Rice Pudding)</string>
    <string name="dessert_choice2">Gulab Jamun</string>
    <string name="dessert_choice3">Kulfi</string>
    <string name="dessert_choice4">Ras Malai</string>

</resources>
