<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/ui_tabname_appetizer"
        android:orientation="horizontal"
        android:src="@drawable/breakfast" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:singleLine="false"
        android:text="@string/appetizerMenu"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rBtnChoice1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="80dp"
                    android:orientation="horizontal"
                    android:text="@string/appetizer_choice1"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rBtnChoice2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/appetizer_choice2"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rBtnChoice3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/appetizer_choice3"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/rBtnChoice4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/appetizer_choice4"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
            </RadioGroup>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>